@@ -5,10 +5,14 @@ import edu.colorado.phet.common.phetcommon.model.property5.DivideDouble;
 import edu.colorado.phet.common.phetcommon.model.property5.ObservableProperty;
 import edu.colorado.phet.common.phetcommon.model.property5.Property;
 import edu.colorado.phet.common.phetcommon.model.property5.doubleproperty.DoubleProperty;
+import edu.colorado.phet.common.phetcommon.util.function.VoidFunction1;
 import edu.colorado.phet.sugarandsaltsolutions.common.model.Crystal;
 import edu.colorado.phet.sugarandsaltsolutions.common.model.Salt;
 import edu.colorado.phet.sugarandsaltsolutions.common.model.Sugar;
 import edu.colorado.phet.sugarandsaltsolutions.common.model.SugarAndSaltSolutionModel;
+
+import static java.lang.Double.isInfinite;
+import static java.lang.Double.isNaN;
 
 /**
  * Introductory model that keeps track of moles of solute dissolved in the liquid.
@@ -26,6 +30,14 @@ public class IntroModel extends SugarAndSaltSolutionModel {
 
     //Determine if there are any solutes (i.e., if moles of salt or moles of sugar is greater than zero).  This is used to show/hide the "remove solutes" button
     public final ObservableProperty<Boolean> anySolutes = molesOfSalt.greaterThan( 0 ).or( molesOfSugar.greaterThan( 0 ) );
+
+    public IntroModel() {
+        saltConcentration.addObserver( new VoidFunction1<Double>() {
+            public void apply( Double concentration ) {
+                System.out.println( "moles of salt = " + molesOfSalt + ", water volume = " + water.volume + ", => conc = " + concentration );
+            }
+        } );
+    }
 
     //When a crystal is absorbed by the water, increase the number of moles in solution
     protected void crystalAbsorbed( Crystal crystal ) {
@@ -57,6 +69,11 @@ public class IntroModel extends SugarAndSaltSolutionModel {
     private void updateConcentration( double outVolume, Property<Double> property ) {
         //Find what the concentration was before water exited
         double initConcentration = property.getValue() / ( water.volume.getValue() + outVolume );
+
+        //If the water volume was zero, it could cause the initConcentration to be NaN, so handle error cases and just have all crystal moles exit in those cases.
+        if ( initConcentration <= 0 || isInfinite( initConcentration ) || isNaN( initConcentration ) ) {
+            initConcentration = 0;
+        }
 
         //Find the new number of moles that keeps the concentration the same
         double finalMoles = initConcentration * water.volume.getValue();
