@@ -1,3 +1,4 @@
+Fixed: If you empty the solution, the bar charts go off-scale and stay that way when you add more water
 Fixed: input faucet flows past the base of the beaker
 Fixed water color for faucets
 Added reset for water level, solute molarities, faucet flow levels and existence of crystals in the air
